# MargrabesBlackBox

./: .gitignore  INSTRUCTIONS.md  pyproject.toml
magrabesblackbox/: main.py
